--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 	<script type="text/javascript" src="TestBed.js"></script>
 </head>
 <body>
+   <p id = "result"></p>
+   <button onclick = "load()">click to load</button>
 </body>
 </html>
