--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
    <p id = "result"></p>
-   <button onclick = "load()">click to load</button>
+   <button onclick = "tbload()">click to load</button>
 </body>
 </html>
