--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<script type="text/javascript" src="TestBed.js"></script>
 </head>
 <body>
-   <p id = "result"></p>
+	<p><i>TestBed</i></p>
+   <p id = "result">Before</p>
    <button onclick = "tbload()">click to load</button>
 </body>
 </html>
