--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<title>TestBed</title>
 	<script type="text/javascript" src="TestBed.js"></script>
 </head>
-<body>
+<body onload="tbload()">
 	<p><i>TestBed</i></p>
    <p id = "result">Before</p>
-   <button onclick = "tbload()">click to load</button>
 </body>
 </html>
