--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>TestBed</title>
-	<script type="text/javascript" src="TestBed.js"></script>
+	<script type="text/javascript" src="index2.js"></script>
 </head>
-<body onload="tbload()">
+<body onload="iload()">
 	<p><i>TestBed</i></p>
 	<p id = "result">Before</p>
 </body>
